Les classes associer à Chansons

--- a/SiteWeb_ISN/appsettings.json
+++ b/SiteWeb_ISN/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "SiteWeb_ISNContext": "Server=(localdb)\\mssqllocaldb;Database=SiteWeb_ISN.Data;Trusted_Connection=True;MultipleActiveResultSets=true"
+  }
 }
