--- a/SiteWeb_ISN/appsettings.json
+++ b/SiteWeb_ISN/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "SiteWeb_ISNContext": "Server=(localdb)\\mssqllocaldb;Database=SiteWeb_ISN.Data;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "APIWeb_ISNContext": "Server=(localdb)\\mssqllocaldb;Database=APIWeb_ISN.Data;Trusted_Connection=True;MultipleActiveResultSets=true"
   }
 }
