--- a/Web_HP/Web_HP/appsettings.json
+++ b/Web_HP/Web_HP/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "Web_HPContext": "Server=(localdb)\\mssqllocaldb;Database=Web_HP.Data;Trusted_Connection=True;MultipleActiveResultSets=true"
+  }
 }
