--- a/SiteWeb_ISN/Properties/launchSettings.json
+++ b/SiteWeb_ISN/Properties/launchSettings.json
@@ -1,4 +1,4 @@
-﻿{
+{
   "$schema": "https://json.schemastore.org/launchsettings.json",
   "iisSettings": {
     "windowsAuthentication": false,
@@ -11,13 +11,11 @@
   "profiles": {
     "SiteWeb_ISN": {
       "commandName": "Project",
-      "dotnetRunMessages": true,
-      "launchBrowser": true,
-      "launchUrl": "swagger",
-      "applicationUrl": "https://localhost:7084;http://localhost:5084",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
-      }
+      },
+      "applicationUrl": "https://localhost:7084;http://localhost:5084",
+      "dotnetRunMessages": true
     },
     "IIS Express": {
       "commandName": "IISExpress",
