site web modification

--- a/Web_HP/Web_HP/Properties/launchSettings.json
+++ b/Web_HP/Web_HP/Properties/launchSettings.json
@@ -1,21 +1,13 @@
-﻿{
-  "iisSettings": {
-    "windowsAuthentication": false,
-    "anonymousAuthentication": true,
-    "iisExpress": {
-      "applicationUrl": "http://localhost:24137",
-      "sslPort": 44320
-    }
-  },
+{
   "profiles": {
     "Web_HP": {
       "commandName": "Project",
-      "dotnetRunMessages": true,
       "launchBrowser": true,
-      "applicationUrl": "https://localhost:24137;http://localhost:5292",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
-      }
+      },
+      "dotnetRunMessages": true,
+      "applicationUrl": "http://localhost:24137;http://localhost:5292"
     },
     "IIS Express": {
       "commandName": "IISExpress",
@@ -24,7 +16,13 @@
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
     }
+  },
+  "iisSettings": {
+    "windowsAuthentication": false,
+    "anonymousAuthentication": true,
+    "iisExpress": {
+      "applicationUrl": "http://localhost:24137",
+      "sslPort": 44320
+    }
   }
 }
-
-//7201
