--- a/Web_HP/Web_HP/appsettings.Development.json
+++ b/Web_HP/Web_HP/appsettings.Development.json
@@ -4,5 +4,9 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "APIWeb_ISNContext": "Server=(localdb)\\mssqllocaldb;Database=APIWeb_ISN.Data;Trusted_Connection=True;MultipleActiveResultSets=true"
   }
 }
